[package]
name = "nxray"
version = "0.1.0"
edition = "2021"
authors = ["Eric Mrak <eric@mrak.online>"]

[[bin]]
name = "nx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pnet = "0.35"
colored = "2"
